--- a/index.html
+++ b/index.html
@@ -140,11 +140,34 @@
                                 <li>CSS</li>
                                 <li>Html</li>
                                 <li>Js</li>
-                                <li>React Native</li>
+                                <li>React</li>
                             </ul>
                         </div>
                     </a>
                 </div>
+
+
+                <div class="project-card">
+                    <a href="https://github.com/wallacezampili/travel-react" target="_blank">
+                        <div class="project-title">
+                            <h1>World News</h1>
+                        </div>
+                        <div class="project-desc">
+                            <p>Site desenvolvido em conjunto com a API do site de notícias New York Times.</p>
+                        </div>
+                        <div class="project-tecs">
+                            <ul>
+                                <li>CSS</li>
+                                <li>Html</li>
+                                <li>Js</li>
+                                <li>React</li>
+                            </ul>
+                        </div>
+                    </a>
+                </div>
+
+
+
             </div>
         </div>
     </section>
