--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                 <li>Html</li>
                 <li>CSS</li>
                 <li>Javascript (ES6+)</li>
-                <li>Node Js</li>
-                <li>React Native</li>
+                <li>Node.js</li>
+                <li>React</li>
                 <li>Mongo DB</li>
                 <li>SQL</li>
             </ul>
@@ -148,7 +148,7 @@
 
 
                 <div class="project-card">
-                    <a href="https://github.com/wallacezampili/travel-react" target="_blank">
+                    <a href="https://github.com/wallacezampili/world_news" target="_blank">
                         <div class="project-title">
                             <h1>World News</h1>
                         </div>
