--- a/index.html
+++ b/index.html
@@ -174,25 +174,26 @@
     <!-- Footer -->
     <footer id="contact">
 
+
         <div class="social-media">
-            <h1 class="title">Meu contato</h1>
-            <p><i class="fa-solid fa-paperclip"></i>wallacewwwallace@gmail.com</p>
-            <p><i class="fa-solid fa-phone"></i>+55 (21)98934-2220</p>
+            <h1 class="title">Contatos</h1>
+            <div class="contact-info">
+                <p><i class="fa-solid fa-paperclip"></i>wallacewwwallace@gmail.com</p>
+                <p><i class="fa-solid fa-phone"></i>+55 (21)98934-2220</p>
+            </div>
+
+        </div>
+
+        
+        <div class="social-container">
+            <h1 class="title">Redes Sociais</h1>
             <div class="social-links">
                 <a href="https://github.com/wallacezampili" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://linkedin.com/in/wallace-zampili-palacio-dos-santos-a62503203" target="_blank"><i
                         class="fa-brands fa-linkedin"></i></a>
             </div>
         </div>
-        <div class="form">
-            <form action="mailto:wallacewwwallace@gmail.com" enctype="text/plain" target="_blank" name="mailForm">
-                <input name="email" type="email" placeholder="E-mail" required>
-                <input name="Subject" type="text" placeholder="Nome" required>
-                <textarea name="body" rows="4" placeholder="Mensagem"></textarea>
 
-                <button class="btn" type="submit">Enviar</button>
-            </form>
-        </div>
 
 
     </footer>
